# rodi_visual_localization

./: CMakeLists.txt  package.xml
launch/: calibrate_camera.launch  localize.launch  localize_rodi.launch
launch/include/: tracker.launch
param/: top_camera.yaml  x_camera.yaml  y_camera.yaml
rviz/: visualization.rviz
scripts/: rodi_localizer  rodi_pose.py  rodi_simple_naviation.py  rodi_visual_localization
