<?xml version="1.0"?>
<package>
  <name>rodi_visual_localization</name>
  <version>0.0.0</version>
  <description>The rodi_visual_localization package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rodi_localization</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
</package>
